Frontend/week 5 fixes (#38)
* Three fixes were made on the front end.

- Duplicate email error message on registration page is now user friendly;
- Filters do not overlap the opened menu on mobiles;
- Navbar work around for iPhones 6, which may have a bugged version of Safari Webkit making the header navbar unaccessible.

* First part of making the products listing more mobile friendly
Replaced the filter label that was a button by a real button, so now, users can know that clicking on it actually does something.

* Second part of making the products listing more mobile friendly
Removed the fixed position of the filters menu by a relative one. Improving the viewport of the mobile users.

--- a/saleor/static/scss/components/_footer.scss
+++ b/saleor/static/scss/components/_footer.scss
@@ -50,6 +50,6 @@
 
 .maincontent {
   @include media-breakpoint-down(sm) {
-    margin-top: $global-margin * 7;
+    margin-top: $global-margin * 6;
   }
 }
